--- a/Practical_ML_Course_Project.Rmd
+++ b/Practical_ML_Course_Project.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Predict activity quality from activity monitors"
-author: "Onur Akpolat"
-date: "24. January 2015"
+author: "Abhinandan Maiti"
+date: "2nd October 2022"
 output:
   html_document:
     keep_md: yes
